# DraftGen

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  VISION_FEATURE_SUMMARY.md  pyproject.toml  requirements.txt
src/: agent.py  document_loader.py  image_handler.py  llm_client.py  presentation_builder.py  report_builder.py
